## Process this file through Automake to produce Makefile.in -*- Makefile -*-

SUBDIRS = doc ntg tests

# "configure.ac" in this directory uses macros in m4 files
ACLOCAL_AMFLAGS = -I m4
CONFIGURE_DEPENDENCIES = m4/cxx.m4 m4/integre.m4 m4/metalic.m4

EXTRA_DIST = m4/cxx.m4 m4/integre.m4 m4/metalic.m4
