# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.54])

AC_INIT([Intègre], 0.1, INTEGRE_CONTACT, [integre])
AC_CONFIG_AUX_DIR([config])
#FIXME
#AC_CONFIG_SRCDIR([m4])
AM_INIT_AUTOMAKE([1.7 no-define foreign dist-bzip2])
AC_CONFIG_HEADERS([config.h:config.hin])

# FIXME: Insert stuff related to CXX FLAGS

AC_CONFIG_FILES([Makefile
		doc/Makefile	
		m4/Makefile
		ntg/Makefile
		tests/Makefile])

AC_OUTPUT
