# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.54])

AC_INIT([Metalic], 0.1, OLN_CONTACT, [metalic])
AC_CONFIG_AUX_DIR([config])
#FIXME
#AC_CONFIG_SRCDIR([oln/m4])
AM_INIT_AUTOMAKE([1.7 no-define foreign dist-bzip2])
AC_CONFIG_HEADERS([config.h:config.hin])

# FIXME: Insert stuff related to CXX FLAGS

AC_CONFIG_FILES([Makefile
                 mlc/Makefile
		 tests/Makefile])

AC_OUTPUT
